--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sezer Shifrlash Dasturi</h1>
-        <textarea id="inputText" placeholder="Matnni kiriting..."></textarea>
-        <input type="number" id="step" placeholder="Qadamni kiriting..." />
-        <button id="encryptButton">Shifrlash</button>
-        <button id="decryptButton">Shifrdan chiqarish</button>
-        <h2>Natija:</h2>
+        <h1>Шифрование Цезаря</h1>
+        <textarea id="inputText" placeholder="Введите текст"></textarea>
+        <input type="number" id="step" placeholder="Введите шаги" />
+        <button id="encryptButton">Шифрование</button>
+        <button id="decryptButton">Расшифровка</button>
+        <h2>Результат</h2>
         <textarea id="outputText" readonly></textarea>
     </div>
     <script src="java.js"></script>
